worked on active playlist

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -488,6 +488,13 @@ body{
                             display: none;
                         }
 
+                        &.activePlaylist {
+
+                            .playlist-button-wrapper {
+                                right: 0;
+                            }
+                        }
+
                     }
                 }
             }
