init implementation tour guide

--- a/app/scripts/templates/help/default.html
+++ b/app/scripts/templates/help/default.html
@@ -2,5 +2,6 @@
 <div id="help">
 
 	<b>{{langHelp}}</b>
-
+	<button v-on="click: startTutorial('interactive')">interactive tutorial</button>
+	<button v-on="click: startTutorial('text')">text tutorial</button>
 </div>
