--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -582,6 +582,11 @@ body{
 
                         .hide{
                             display: none;
+
+                            &.showUploadClass {
+                                display: block;
+                                opacity: 0.7;
+                            }
                         }
 
                         &.activePlaylist {
