--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -40,6 +40,47 @@
 }
 
 // -------------------------------------
+//  FONTS
+// -------------------------------------
+@font-face {
+    font-family: 'ubuntubold';
+    src: url('../fonts/ubuntu-b-webfont.eot');
+    src: url('../fonts/ubuntu-b-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-b-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-b-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-b-webfont.ttf') format('truetype'),
+         url('../fonts/ubuntu-b-webfont.svg#ubuntubold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ubunturegular';
+    src: url('../fonts/ubuntu-r-webfont.eot');
+    src: url('../fonts/ubuntu-r-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-r-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-r-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-r-webfont.ttf') format('truetype'),
+         url('../fonts/ubuntu-r-webfont.svg#ubunturegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'ubuntumedium';
+    src: url('../fonts/ubuntu-m-webfont.eot');
+    src: url('../fonts/ubuntu-m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ubuntu-m-webfont.woff2') format('woff2'),
+         url('../fonts/ubuntu-m-webfont.woff') format('woff'),
+         url('../fonts/ubuntu-m-webfont.ttf') format('truetype'),
+         url('../fonts/ubuntu-m-webfont.svg#ubuntumedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+// -------------------------------------
 //  COLORS
 // -------------------------------------
 $white: #ffffff;
@@ -230,6 +271,8 @@ html[xmlns] .clearfix {
 
 body{
     background-color: $bgColor;
+    font-family: 'ubuntumedium', Arial, sans-serif;
+    font-size: 14px;
 
     // default structure
     #app{
@@ -296,6 +339,8 @@ body{
                         }
 
                         span {
+                            font-family: 'ubuntubold', Arial, sans-serif;
+                            font-size: 18px;
                             position: absolute;
                             left: 45px;
                         }
@@ -352,13 +397,14 @@ body{
                 #currently-playing{
                     display: block;
                     width: 100vw;
-                    margin-bottom: 10px;
+                    margin-bottom: 52px;
                     #info-track-wrapper, #dj-wrapper{
                         min-height: 130px;
                         max-height: 200px;
                         height: 20vh;
                         float: left;
                         position: relative;
+
                     }
                     #info-track-wrapper{
                         width: 42.5vw;
@@ -502,17 +548,17 @@ body{
 
                     .playlist {
                         width: 100%;
-                        height: 40px;
+                        height: 52px;
 
                         .playlist-button {
-                            padding: 12px 28px 0 6px;
-                            height: 28px;
+                            padding: 16px 28px 0 10px;
+                            height: 36px;
                             float: right;
                             position: relative;
 
                             img {
                                 position: relative;
-                                width: 15px;
+                                width: 18px;
                                 z-index: 100;
                             }
                         }
@@ -543,14 +589,14 @@ body{
                             }
 
                             .line-text {
-                                padding: 12px 0 0 6px;
+                                padding: 18px 0 0 16px;
                                 color: $playlistText;
                                 float: left;
                                 position: relative;
                             }
 
                             .line-title {
-                                padding: 12px 0 0 6px;
+                                padding: 18px 0 0 6px;
                                 color: white;
                                 float: left;
                                 position: relative;
@@ -570,21 +616,21 @@ body{
                             .delete-button {
                                 z-index: 100;
                                 background-color: $btnColorDark;
-                                @include skewedBorder(left, -13px, 100, 20px, $btnColorDark);
+                                @include skewedBorder(left, -10px, 100, 20px, $btnColorDark);
                             }
 
                             .swapup-button {
                                 display: none;
                                 z-index: 90;
                                 background-color: $btnColorMiddle;
-                                @include skewedBorder(left, -13px, 90, 20px, $btnColorMiddle);
+                                @include skewedBorder(left, -10px, 90, 20px, $btnColorMiddle);
                             }
                             
                             .swapdown-button { 
                                 display: none;
                                 z-index: 80;
                                 background-color: $btnColorLight;
-                                @include skewedBorder(left, -13px, 80, 20px, $btnColorLight);
+                                @include skewedBorder(left, -10px, 80, 20px, $btnColorLight);
 
                                 img {
                                     transform: rotate(180deg);
@@ -592,7 +638,7 @@ body{
                             }
 
                             &.showSwapUpClass {
-                                right: -104px;
+                                right: -98px;
 
                                 .swapup-button {
                                     display: block;
@@ -600,7 +646,7 @@ body{
                             }
 
                             &.showSwapDownClass {
-                                right: -104px;
+                                right: -98px;
 
                                 .swapdown-button {
                                     display: block;
@@ -609,7 +655,7 @@ body{
                             }
 
                             &.showSwapUpClass.showSwapDownClass {
-                                right: -152px;
+                                right: -154px;
                             }
 
                         }
@@ -620,19 +666,23 @@ body{
                             .browse-button {
                                 z-index: 100;
                                 background-color: $btnColorMiddle;
-                                @include skewedBorder(left, -13px, 100, 20px, $btnColorMiddle);
+                                @include skewedBorder(left, -10px, 100, 20px, $btnColorMiddle);
+
+                                img {
+                                    padding-top: 3px;
+                                }
                             }
 
                             .cancel-button {
                                 z-index: 90;
                                 background-color: $btnColorDark;
-                                @include skewedBorder(left, -13px, 90, 20px, $btnColorDark);
+                                @include skewedBorder(left, -10px, 90, 20px, $btnColorDark);
                             }
 
                             .upload-button {
                                 z-index: 80;
                                 background-color: $btnColorMiddle;
-                                @include skewedBorder(left, -13px, 80, 20px, $btnColorMiddle);
+                                @include skewedBorder(left, -10px, 80, 20px, $btnColorMiddle);
                             }
                         }
 
